fixed scroll overlap

--- a/public/stylesheets/components/grid.css
+++ b/public/stylesheets/components/grid.css
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
   justify-content: center;
   width: 100%;
-  height: calc(100vh - 300px) !important;
+  height: calc(100vh - 380px) !important;
   overflow-y: scroll;
 }
 
